# MadisonAPI

./: .travis.yml  LICENSE  README.md  madison-api.cabal  stack.yaml
app/: Main.hs
sql/: triggers.sql
src/: Api.hs  Config.hs  Lib.hs  Models.hs  entities
src/Api/: Authentication.hs  Register.hs  Session.hs  Types.hs  User.hs  Warehouse.hs
src/Formula/: Evaluator.hs  Functions.hs  Parser.hs  Types.hs
src/Lib/: Authentication.hs  Mail.hs
src/Models/: Base.hs  Register.hs  User.hs  Warehouse.hs
test/: Spec.hs  SpecSupport.hs
test/Api/: RegisterSpec.hs  SessionSpec.hs  WarehouseSpec.hs
test/Formula/: EvaluatorSpec.hs
