name:                madison-api
version:             0.1.0.0
synopsis:            Madison Erp API Backend
description:         Please see README.md
homepage:            https://github.com/werner/MadisonAPI#readme
license:             BSD3
license-file:        LICENSE
author:              Werner Echezuria
maintainer:          werner_a_e@yahoo.es
copyright:           2016 Werner Echezuria
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , parsec
                     , indents
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , transformers
  default-language:    Haskell2010

executable madison-api-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , madison-api
  default-language:    Haskell2010

test-suite madison-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , madison-api
                     , hspec
                     , containers
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/werner/MadisonAPI
