name:                madison-api
version:             0.1.0.0
synopsis:            Madison Erp API Backend
description:         Please see README.md
homepage:            https://github.com/werner/MadisonAPI#readme
license:             BSD3
license-file:        LICENSE
author:              Werner Echezuria
maintainer:          werner_a_e@yahoo.es
copyright:           2016 Werner Echezuria
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Config, Models
                     , Api, Api.Types, Api.Authentication, Api.Session, Api.Register, Api.User, Api.Warehouse
                     , Formula.Evaluator, Formula.Parser, Formula.Types, Formula.Functions
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant
                     , servant-server
                     , cookie
                     , servant-auth-cookie
                     , wai
                     , wai-extra
                     , wai-cors
                     , case-insensitive 
                     , mtl
                     , warp
                     , http-api-data 
                     , bytestring
                     , monad-control
                     , monad-logger
                     , parsec
                     , indents
                     , containers
                     , persistent            
                     , persistent-postgresql 
                     , persistent-template
                     , esqueleto             
                     , postgresql-simple
                     , monad-logger
                     , transformers
                     , vector
                     , time
                     , safe
                     , template-haskell
                     , text
                     , either
                     , cereal
                     , exceptions
                     , cryptonite
                     , uuid
                     , uuid-types
                     , QuickCheck
  default-language:    Haskell2010

executable madison-api-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , madison-api
                     , persistent            ==2.2.4.1
                     , persistent-postgresql ==2.2.2
                     , persistent-template   ==2.1.8.1
                     , esqueleto             ==2.4.3
                     , warp
                     , safe
  default-language:    Haskell2010

test-suite madison-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , madison-api
                     , hspec
                     , containers
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
                     , persistent            ==2.2.4.1
                     , persistent-postgresql ==2.2.2
                     , persistent-sqlite     ==2.2.1
                     , persistent-template   ==2.1.8.1
                     , esqueleto             ==2.4.3
                     , bytestring
                     , monad-logger
                     , transformers
                     , safe
                     , wai
                     , wai-extra
                     , case-insensitive 
                     , warp
                     , servant
                     , servant-client
                     , servant-server
                     , http-client
                     , http-types
                     , http-api-data 
                     , text
                     , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/werner/MadisonAPI
